Can we use a div to fix left labels in place as we scroll horizontally? Maybe, but this solution messes up vertical scrolling (decouples it from horizontal scrolling, so the bucket labels are wrong when scrolled)

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -17,48 +17,57 @@ label
 	disabled: true
 .stage
 	top: 2px
-	position: relative
 	box-sizing: border-box
 	max-height: 70vh
 	max-width: 90vw
 	overflow-y: auto
-	.header
-		position: absolute
-		cursor: default
-		disabled: true
-	.divider
-		position: absolute
-		cursor: default
-		disabled: true
-	.bucket
-		color: white
-		background-color: black
-		padding-left: 2px
-		height: 1em
-		width: 15em
-		position: absolute
-		cursor: default
-		disabled: true
-	.item
-		color: white
-		background-color: blue
-		padding-left: 2px
-		height: 1em
-		width: 10em
-		position: absolute
-		cursor: default
-	.item.finished
-		background-color: green
-	.dropped
-		color: white
-		background-color: darkred
-		padding-left: 2px
-		height: 1em
-		position: absolute
-		text-overflow: clip
-		border: 1px solid black
-	.item:hover, .dropped:hover, .bucket:hover
-		border-color: lightgrey
+	display: flex
+	flex-direction: row
+	.leftHeader
+		position: relative
+		width: 200px
+		.bucket
+			color: white
+			background-color: black
+			padding-left: 2px
+			height: 1em
+			width: 15em
+			position: absolute
+			cursor: default
+			disabled: true
+	.rightContent
+		left: 20px
+		width: calc(100% - 220px)
+		position: relative
+		overflow-x: auto
+		.header
+			position: absolute
+			cursor: default
+			disabled: true
+		.divider
+			position: absolute
+			cursor: default
+			disabled: true
+		.item
+			color: white
+			background-color: blue
+			padding-left: 2px
+			height: 1em
+			width: 10em
+			position: absolute
+			cursor: default
+		.item.finished
+			background-color: green
+		.dropped
+			color: white
+			background-color: darkred
+			padding-left: 2px
+			height: 1em
+			position: absolute
+			text-overflow: clip
+			border: 1px solid black
+		.item:hover, .dropped:hover, .bucket:hover
+			border-color: lightgrey
 .menuItem
 	margin-left: 1em
 .selected
